; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_utils.c_init_files.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mutual-friends/extr_utils.c_init_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@f_inited = common dso_local global i32 0, align 4
@fnames = common dso_local global i8* null, align 8
@fd = common dso_local global i8* null, align 8
@fsize = common dso_local global i8* null, align 8
@fcurr = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_files(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @f_inited, align 4
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 8, %9
  %11 = trunc i64 %10 to i32
  %12 = call i8* @qmalloc0(i32 %11)
  store i8* %12, i8** @fnames, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = mul i64 4, %14
  %16 = trunc i64 %15 to i32
  %17 = call i8* @qmalloc0(i32 %16)
  store i8* %17, i8** @fd, align 8
  %18 = load i32, i32* %2, align 4
  %19 = sext i32 %18 to i64
  %20 = mul i64 8, %19
  %21 = trunc i64 %20 to i32
  %22 = call i8* @qmalloc0(i32 %21)
  store i8* %22, i8** @fsize, align 8
  %23 = load i32, i32* %2, align 4
  %24 = sext i32 %23 to i64
  %25 = mul i64 8, %24
  %26 = trunc i64 %25 to i32
  %27 = call i8* @qmalloc0(i32 %26)
  store i8* %27, i8** @fcurr, align 8
  %28 = load i32, i32* %2, align 4
  store i32 %28, i32* @f_inited, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @qmalloc0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
